--- a/capstoneProject/src/main/resources/templates/error/404.html
+++ b/capstoneProject/src/main/resources/templates/error/404.html
@@ -12,13 +12,13 @@
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
 
-<title>Unavailable</title>
+<title data-th-text="#{unavailableTitle}">Unavailable</title>
 </head>
 <body>
-	<h1 align="center">The page that you have chosen is unavailable</h1>
+	<h1 align="center" data-th-text="#{unavailableMessage}">The page that you have chosen is unavailable</h1>
 	<div align="center">
 		<form data-th-action="|/app/timeline|" method="GET">
-			<button class="alert alert-info" type="submit">Click here</button>
+			<button class="alert alert-info" type="submit" data-th-text="#{unauthorizedButton}">Click here</button>
 		</form>
 	</div>
 </body>
