--- a/capstoneProject/src/main/resources/templates/postComment.html
+++ b/capstoneProject/src/main/resources/templates/postComment.html
@@ -1,66 +1,333 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
 
-    <title data-th-text="|Make a Post Comment, ${@sessionManager.loggedInUser.username}|"></title>
-  </head>
-  <body>
-  <h1> Make a Comment on <span class="alert alert-warning" data-th-text="${post.name}"></span>
-  		by <span class="alert alert-warning" data-th-text="${post.author}"></span></h1>:
-	<br /><br />
-  <h2><span class="alert alert-warning" data-th-text="${post.content}"></span></h2>
-  <br />
-	<hr /><hr />
+<title data-th-text="#{postCommentTitle}"></title>
+</head>
+<body>
+	<h1>
+		<span data-th-text="#{postCommentIntro}"></span> <span
+			class="alert alert-warning" data-th-text="${post.name}"></span> <span
+			data-th-text="#{profilePreposition}"></span> <span
+			class="alert alert-warning" data-th-text="${post.author.username}"></span>
+	</h1>
+	<br />
+	<br />
+	<h2>
+		<span class="alert alert-warning" data-th-text="${post.content}"></span>
+	</h2>
+	<br />
+	<hr />
 	<h4 data-th-if="${post.hasComments}">
-		<span data-th-if="${post.hasOneComment}">
-			<span data-th-text="|${post.name}'s Comment So Far|"></span>
-		</span>
-		<span data-th-unless="${post.hasOneComment}">
-			<span data-th-text="|${p.name}'s Comments So Far|"></span>
+		<span data-th-if="${post.hasOneComment}"> <span
+			data-th-text="|#{oneCommentPostComment} ${post.name}|"></span>
+		</span> <span data-th-unless="${post.hasOneComment}"> <span
+			data-th-text="|#{plusOneCommentPostComment} ${post.name}|"></span>
 		</span>
 	</h4>
-		<div data-th-if="${post.hasComments}">
-			<div data-th-each="pc : ${post.postComments}">
-			<br />
-				<span class="alert alert-secondary" data-th-text="${pc.content}">
-				</span>
-					<br /><br />
-							<span class="alert alert-secondary">Comment made by</span> 
-						<span data-th-if="${pc.author.id == @sessionManager.loggedInUser.id}">
-							<br /><br />
-							<span class="alert alert-secondary" data-th-text="|you, at ${pc.commentDate}|"></span> 
-						</span>
-							<br /><br />
-						<span data-th-unless="${pc.author.id == @sessionManager.loggedInUser.id}">
-							<span class="alert alert-secondary"> <a data-th-href="|/app/${pc.author.username}|" 
-								data-th-text="${pc.author}"></a>, 
-								at <span data-th-text="${pc.commentDate}"></span>
-							</span>
-				<br /><br />
-						</span>
-			</div>
+	<div data-th-if="${post.hasComments}">
+		<div data-th-each="pc : ${post.postComments}">
+			<br /> <span class="alert alert-secondary"
+				data-th-text="${pc.content}"> </span> <br /> <br /> <span
+				class="alert alert-secondary" data-th-text="#{postCommentMadeBy}">Comment made by</span> <span
+				data-th-if="${pc.author.id == @sessionManager.loggedInUser.id}">
+				<br /> <br /> <span class="alert alert-secondary"
+				data-th-text="|#{loggedInUserProfile},
+				 #{transcriptionDateTimeline} ${pc.commentDate}, #{transcriptionTimeTimeline} ${pc.commentTime}|"></span>
+			</span> <br /> <br /> <span
+				data-th-unless="${pc.author.id == @sessionManager.loggedInUser.id}">
+				<span class="alert alert-secondary"
+					data-th-text="|${pc.author.username},  
+					#{transcriptionDateTimeline} ${pc.commentDate}, #{transcriptionTimeTimeline} ${pc.commentTime}|"></span>
+			</span> <br /> <br />
 		</div>
-		<h2> <a data-th-href="|/app/timeline|">Or Go Back to the Timeline</a></h2>
-	<form data-th-action="|/app/postComment/${post.id}|" method="POST" data-th-object="${postComment}">
+	</div>
+	<h2>
+		<a data-th-href="|/app/timeline|"
+			data-th-text="|#{toTimelineFromPost}|">Or Go Back to the Timeline</a>
+	</h2>
+	<form data-th-action="|/app/postComment/${post.id}|" method="POST"
+		data-th-object="${postComment}">
 		<label for="content"></label>
-		<textarea class="form-control" placeholder="Here is Where the Comment Goes" 
-			rows="6" cols="50" id="content" data-th-field="*{content}" data-th-errorclass="is-invalid" >
+		<textarea class="form-control"
+			data-th-placeholder="#{postCommentPlaceholder}" rows="6" cols="50"
+			id="text" data-th-field="*{content}" data-th-errorclass="is-invalid">
 		</textarea>
-			<div class="invalid-feedback" data-th-errors="*{content}">error</div>
-		<button type="submit" class="btn btn-primary">Post It</button>
+		<div class="invalid-feedback" data-th-errors="*{content}">error</div>
+
+		<div data-th-if="${extraLetters}">
+			<br />
+			<h3>Les Lettres Accentuées</h3>
+			<table class="table table-bordered">
+
+				<tbody>
+				<thead>
+					<tr>
+						<th scope="row"></th>
+						<td>a accent grave</td>
+						<td>a-e entrelacé</td>
+						<td>e accent grave</td>
+						<td>e accent aigu</td>
+						<td>e circonflexe</td>
+						<td>e tréma</td>
+						<td>i circonflexe</td>
+						<td>i tréma</td>
+						<td>o circonflexe</td>
+						<td>u circonflexe</td>
+						<td>c cédille</td>
+						<td>o-e entrelacé</td>
+					</tr>
+				</thead>
+				<tr>
+					<th scope="row">en miniscule</th>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); aAccentGraveLC()">&#224;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); aeEntrelaceLC()">&#230;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eAccentGraveLC()">&#232;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eAccentAiguLC()">&#233;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eCirconflexeLC()">&#234;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eTremaLC()">&#235;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); iCirconflexeLC()">&#238;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); iTremaLC()">&#239;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); oCirconflexeLC()">&#244;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); uCirconflexeLC()">&#251;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); cCedilleLC()">&#231;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); oeEntrelaceLC()">&#339;</button>
+					</span></td>
+				</tr>
+				<tr>
+					<th scope="row">en majuscule</th>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); aAccentGraveUC()">&#192;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); aeEntrelaceUC()">&#198;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eAccentGraveUC()">&#200;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eAccentAiguUC()">&#201;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eCirconflexeUC()">&#202;</button>
+					</span></td>
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); eTremaUC()">&#203;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); iCirconflexeUC()">&#206;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); iTremaUC()">&#207;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); oCirconflexeUC()">&#212;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); uCirconflexeUC()">&#219;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); cCedilleUC()">&#199;</button>
+					</span></td>
+
+					<td><span>
+							<button class="btn btn-primary"
+								onClick="event.preventDefault(); oeEntrelaceUC()">&#338;</button>
+					</span></td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+		<button type="submit" class="btn btn-primary"
+			data-th-text="#{postCommentButton}">Comment in the post-like
+			way</button>
+
 	</form>
-  </body>
-  
-      <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
+
+<script>
+		const aAccentGraveLC = () => {
+			document.getElementById("text").value+= "\u00E0";
+		}
+		
+		const aeEntrelaceLC = () => {
+			document.getElementById("text").value+= "\u00E6";
+		}
+		
+		const eAccentGraveLC = () => {
+			document.getElementById("text").value+= "\u00E8";
+		}
+		
+		const eAccentAiguLC = () => {
+			document.getElementById("text").value+= "\u00E9";
+		}
+		
+		const eCirconflexeLC = () => {
+			document.getElementById("text").value+= "\u00EA";
+		}
+		
+		const eTremaLC = () => {
+			document.getElementById("text").value+= "\u00EB";
+		}
+		
+		const iCirconflexeLC = () => {
+			document.getElementById("text").value+= "\u00EE";
+		}
+		
+		const iTremaLC = () => {
+			document.getElementById("text").value+= "\u00EF";
+		}
+		
+		const oCirconflexeLC = () => {
+			document.getElementById("text").value+= "\u00F3";
+		}
+		
+		const uCirconflexeLC = () => {
+			document.getElementById("text").value+= "\u00FB";
+		}
+		
+		const cCedilleLC = () => {
+			document.getElementById("text").value+= "\u00E7";
+		}
+		
+		const oeEntrelaceLC = () => {
+			document.getElementById("text").value+= "\u0153";
+		}
+		
+		
+		const aAccentGraveUC = () => {
+			document.getElementById("text").value+= "\u00C0";
+		}
+		
+		const aeEntrelaceUC = () => {
+			document.getElementById("text").value+= "\u00C6";
+		}
+		
+		const eAccentGraveUC = () => {
+			document.getElementById("text").value+= "\u00C8";
+		}
+		
+		const eAccentAiguUC = () => {
+			document.getElementById("text").value+= "\u00C9";
+		}
+		
+		const eCirconflexeUC = () => {
+			document.getElementById("text").value+= "\u00CA";
+		}
+		
+		const eTremaUC = () => {
+			document.getElementById("text").value+= "\u00CB";
+		}
+		
+		const iCirconflexeUC = () => {
+			document.getElementById("text").value+= "\u00CE";
+		}
+		
+		const iTremaUC = () => {
+			document.getElementById("text").value+= "\u00CF";
+		}
+		
+		const oCirconflexeUC = () => {
+			document.getElementById("text").value+= "\u00D4";
+		}
+		
+		const uCirconflexeUC = () => {
+			document.getElementById("text").value+= "\u00DB";
+		}
+		
+		const cCedilleUC = () => {
+			document.getElementById("text").value+= "\u00C7";
+		}
+		
+		const oeEntrelaceUC = () => {
+			document.getElementById("text").value+= "\u0152";
+		}
+	
+	</script>
+
+
+
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	crossorigin="anonymous"></script>
+</body>
 </html>
